# helpers

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml  tests.yml
helpers/: __init__.py  anticaptchas.py  config.json  config.py  errors.py  fake_mails.py  fake_numbers.py  fake_person.py
tests/: conftest.py  test_anticaptchas.py  test_fakemails.py
