[tool.poetry]
name = "helpers"
version = "0.1.0"
description = ""
authors = ["alexey_naidiuk <alexeynaidiuk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = {extras = ["all"], version = "^0.27.2"}
pytest-asyncio = "^0.24.0"
selectolax = "^0.3.27"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
extend-select = ["C4", "SIM", "TCH", "PLR", "R"]
ignore = ["PLR0913"]

[tool.ruff]
line-length = 120
target-version = "py311"


[tool.ruff.lint.pylint]
max-statements = 35
