[project]
name = "helpers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "python-dotenv>=1.1.1",
    "selectolax>=0.3.31",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.0.0",
]
# pyproject.toml
[tool.pytest.ini_options]
addopts = "-v"
pythonpath = '.'
asyncio_mode= 'auto'